# m09.github.io

./: .gitignore  CNAME  Gemfile  LICENSE  Makefile  _config.yml  about.md  blog.cabal  build.sh  collapsology.md  contact.md  feed.md  go.md  index.html  index.md  machine-learning.md  new_post.sh  publish.sh  site.hs  talks.md
_includes/: footer.html  head.html  header.html
_sass/minima/: _layout.scss
app/: Site.hs
assets/css/: bootstrap.css  custom.css
css/: default.css
posts/: 2013-09-01-an-efficient-setup-to-produce-presentations.md  2013-09-04-prolog-presentation-for-nantes-fp.md  2013-09-15-an-introduction-to-dynamic-programming.md  2013-09-26-a-nice-maths-problem-the-b52-and-the-submarine.md  2013-11-16-a-hidden-markov-model-attempting-to-write.md  2013-12-20-great-coursera-on-sren-kierkegaard.md  2014-03-25-a-tribute-to-java-8.md  2016-01-05-neural-programming.md  2016-03-31-alphago-talk.md
static/: about.md  feed.md
templates/: default.html  nav.html  post-list.html  post.html  posts.html  signature.html  structure.html
