name:                blog
version:             0.1.0.0
synopsis:            m09's blog
description:         m09's blog website
homepage:            http://github.com/m09/blog
license:             BSD3
license-file:        LICENSE
author:              Hugo Mougard
maintainer:          mog@crydee.eu
copyright:           2016 Hugo Mougard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  hs-source-dirs:      app
  main-is:             Site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , split
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/m09/blog
